[build-system]
requires = ["setuptools", "wheel", "pkgconfig>=1.5.5", "numpy>=1.19.5", "cython>=0.29"]

[tool.ruff]
target-version = "py37"

[tool.ruff.lint]
extend-select = [
  "B",   # flake8-bugbear
  "I",   # isort
  "PGH", # pygrep-hooks
  "RUF", # Ruff-specific
  "UP",  # pyupgrade
]

[tool.mypy]
ignore_missing_imports = true

[tool.cibuildwheel]
skip = "cp36-*"
test-requires = "pytest"
test-command = "pytest {project}/test"
manylinux-x86_64-image = "manylinux2014"
manylinux-i686-image = "manylinux2014"

[tool.cibuildwheel.linux]
before-all = [
   "yum install -y fftw3-devel lapack-devel"
]

[[tool.cibuildwheel.overrides]]
select = "*musllinux*"
before-all = [
  "apk add fftw-dev lapack-dev",
]

[tool.cibuildwheel.macos]
before-all = "brew install fftw pkg-config"
