[build-system]
requires = ["setuptools", "wheel", "pkgconfig>=1.5.5", "numpy>=1.21,<2", "cython>=3.0"]

[tool.ruff]
target-version = "py37"
extend-exclude = ["attic", "venv"]

[tool.ruff.lint]
extend-select = [
  "B",   # flake8-bugbear
  "I",   # isort
  "PGH", # pygrep-hooks
  "RUF", # Ruff-specific
  "UP",  # pyupgrade
  "NPY201", # numpy 2.0 migration
]
preview = true

[tool.mypy]
ignore_missing_imports = true

[tool.cibuildwheel]
skip = "cp36-*"
test-requires = "pytest"
test-command = "pytest {project}/test"
manylinux-x86_64-image = "manylinux2014"
manylinux-i686-image = "manylinux2014"

[tool.cibuildwheel.linux]
before-all = [
   "yum install -y fftw3-devel lapack-devel"
]

[[tool.cibuildwheel.overrides]]
select = "*musllinux*"
before-all = [
  "apk add fftw-dev lapack-dev",
]

[tool.cibuildwheel.macos]
before-all = [
  "curl -O http://fftw.org/fftw-3.3.10.tar.gz",
  "echo '56c932549852cddcfafdab3820b0200c7742675be92179e59e6215b340e26467  fftw-3.3.10.tar.gz' | shasum -a 256 -c",
  "tar zxf fftw-3.3.10.tar.gz",
  "cd fftw-3.3.10",
  "./configure --enable-shared --disable-debug --enable-threads --disable-dependency-tracking",
  "make",
  "sudo make install"
]
