[build-system]
requires = ["setuptools", "wheel", "pkgconfig>=1.5.5", "numpy>=1.21", "cython>=3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "libtfr"
version = "2.1.10"
description = "Calculate multi-taper windowed and time-frequency reassignment spectrograms"
readme = "README.rst"
requires-python = ">=3.9"
license = { text = "GPL-3.0-or-later" }
authors = [
    {name = "C Daniel Meliza", email = "dan@meliza.org"},
]
maintainers = [
    {name = "C Daniel Meliza", email = "dan@meliza.org"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",    
    "Topic :: Scientific/Engineering",
    "Operating System :: Unix",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Natural Language :: English"
]
dependencies = [
    "numpy>=2.0.2",
]

[project.urls]
homepage = "https://github.com/melizalab/libtfr"

[dependency-groups]
dev = [
    "pytest>=7.4.4",
    "pytest-cov>=4.1.0",
    "ruff>=0.14.3",
]

[tool.ruff]
line-length = 88
target-version = "py39"
extend-exclude = ["attic", "venv", "build"]

[tool.ruff.lint]
extend-select = [
    "F",  # pyflakes
    "B",   # flake8-bugbear
    "I",   # isort
    "PGH", # pygrep-hooks
    "RUF", # Ruff-specific
    "UP",  # pyupgrade
    "NPY201", # numpy 2.0
]

[tool.mypy]
ignore_missing_imports = true

[tool.cibuildwheel]
skip = "cp36-*"
test-requires = "pytest"
test-command = "pytest {project}/test"
manylinux-x86_64-image = "manylinux2014"
manylinux-i686-image = "manylinux2014"
# enable pypy builds - no longer on by default
enable = "pypy"

[tool.cibuildwheel.linux]
before-all = [
   "yum install -y fftw3-devel lapack-devel"
]

[[tool.cibuildwheel.overrides]]
select = "*musllinux*"
before-all = [
  "apk add fftw-dev lapack-dev",
]

[tool.cibuildwheel.macos]
before-all = [
  "curl -O http://fftw.org/fftw-3.3.10.tar.gz",
  "echo '56c932549852cddcfafdab3820b0200c7742675be92179e59e6215b340e26467  fftw-3.3.10.tar.gz' | shasum -a 256 -c",
  "tar zxf fftw-3.3.10.tar.gz",
  "cd fftw-3.3.10",
  "./configure --enable-shared --disable-debug --enable-threads --disable-dependency-tracking",
  "make",
  "sudo make install"
]
