[pep8]
ignore=E221,E501,E701

[flake8]
ignore = E221,E501,E701
max-line-length = 120
exclude = tests/*
max-complexity = 10

[metadata]
name = libtfr
version = 2.1.8
description = Calculates multi-taper windowed and time-frequency reassignment spectrograms
long_description = file: README.rst
long_description_content_type = text/x-rst
license = GNU General Public License (GPL)
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License (GPL)
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering
    Operating System :: Unix
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Natural Language :: English
author = Dan Meliza
author_email = dan@meliza.org
maintainer = Dan Meliza
maintainer_email = dan@meliza.org
url = https://github.com/melizalab/libtfr

[options]
zip_safe = false
python_requires = >= 3.7
setup_requires =
    setuptools >=58.1.0
install_requires =
    numpy >= 1.19.5, <2
test_suite = tests

[options.extras_require]
test =
    pytest >= 7.0

[options.packages.find]
exclude = *test*
